scripts/nullaway/original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8.txt
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCGenerator.java:7: error: [NullAway] @NonNull static field variableList not initialized
	private static ArrayList<VariableInformation> variableList;
	                                              ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperPostParser.java:10: error: [NullAway] @NonNull field parseTree not initialized
	private ParseTree parseTree;
	                  ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:23: error: [NullAway] @NonNull field lexer not initialized
	private EsperLexer lexer;
	                   ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:24: error: [NullAway] @NonNull field parseRoot not initialized
	private ParseTree parseRoot;
	                  ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperCompiler.java:25: error: [NullAway] @NonNull field variableList not initialized
	private ArrayList<VariableInformation> variableList;
	                                       ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:84: error: [NullAway] @NonNull field EsperParser$program_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:141: error: [NullAway] @NonNull field EsperParser$statements_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:227: error: [NullAway] @NonNull field EsperParser$statement_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:470: error: [NullAway] @NonNull field EsperParser$expr_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:625: error: [NullAway] @NonNull field EsperParser$term_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:747: error: [NullAway] @NonNull field EsperParser$factor_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:812: error: [NullAway] @NonNull field EsperParser$declaration_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:887: error: [NullAway] @NonNull field EsperParser$assign_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:962: error: [NullAway] @NonNull field EsperParser$ifthenelse_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1094: error: [NullAway] @NonNull field EsperParser$if__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1169: error: [NullAway] @NonNull field EsperParser$elseif_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1235: error: [NullAway] @NonNull field EsperParser$else__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1301: error: [NullAway] @NonNull field EsperParser$condition_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1376: error: [NullAway] @NonNull field EsperParser$conditionaloperator_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1441: error: [NullAway] @NonNull field EsperParser$print_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1507: error: [NullAway] @NonNull field EsperParser$vartype_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1572: error: [NullAway] @NonNull field EsperParser$forloop_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1638: error: [NullAway] @NonNull field EsperParser$for__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1713: error: [NullAway] @NonNull field EsperParser$forgap_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1798: error: [NullAway] @NonNull field EsperParser$whileloop_return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
../original/url89cafed56a_AlexDiru_esper_compiler_final_tgz-pJ8-compiler_ProgramJ8/src/compiler/EsperParser.java:1864: error: [NullAway] @NonNull field EsperParser$while__return.tree not initialized
        Object tree;
               ^
    (see http://t.uber.com/nullaway )
26 errors
